@@ -1,6 +1,9 @@
+22 August 2007
++ removed calendar colors that matched default theme.
+
 Version 1.5.1
 -----------------------------------------------------------------
-27 August 2007
+27 July 2007
 + increased popup size for schedule
 
 
